# json-objects-to-csv

./: Cargo.toml  LICENCE.md  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: error.rs  lib.rs
