[package]
name = "json-objects-to-csv"
version = "0.1.3"
edition = "2021"
authors = ["Vicent Selfa <vtselfa@gmail.com>"]
description = "Robust Rust library for converting JSON objects into CSV rows"
repository = "https://github.com/vtselfa/json-objects-to-csv"
license = "MIT"
readme = "README.md"
keywords = ["json", "csv", "convert", "flatten", "serde"]
categories = ["encoding"]

[dependencies]
csv = "1.1.6"
flatten-json-object = "0.6.1"
serde_json = "1.0.79"
tempfile = "3.0.8"
thiserror = "1.0.30"

[dev-dependencies]
rstest = "0.18.2"
